--- a/FootNet/Views/Home/Index.cshtml
+++ b/FootNet/Views/Home/Index.cshtml
@@ -36,7 +36,7 @@
                 </button>
             </div>
        </div>
-    <div style="display:none"id="allcartmenu">
+    <div id="allcartmenu">
             @*  ---------------------------Content menu --------------------------------- *@
             <div class="frame-menu">
                 <button type="button" class="btn btn-light "><iconify-icon icon="ic:round-all-inbox" class="icon-menu"></iconify-icon>Tất cả</button>
@@ -125,7 +125,7 @@
             </div>
     </div>
     @* ----------------------------------------------------------- *@
-        <div class="support-suggestions">
+        <div  class="support-suggestions">
             <div class="items-support"><img src="Image/Service/attitude.jpg" /></div>
             <div class="items-support"><img src="Image/Service/clearchair.jpg" /></div>
             <div class="items-support"><img src="Image/Service/clearkeyboard.jpg" /></div>
@@ -133,9 +133,7 @@
             <div class="items-support"><img src="Image/Service/fooddrink.jpg" /></div>
             <div class="items-support"><img src="Image/Service/hot.jpg" /></div>
             <div class="items-support"><img src="Image/Service/keyboard.jpg" /></div>
-            <div class="items-support"></div>
 
-        <div class="items-support"></div>
     </div>
  </div>
     @* -------------------------------------------------------------------------------------------- *@
