--- a/Admin_Baocao/wwwroot/css/admin.css
+++ b/Admin_Baocao/wwwroot/css/admin.css
@@ -77,16 +77,29 @@ span #gcp-version {
 .pd-20 {
   padding: 20px;
 }
+.pd-4 {
+    padding: 4px;
+}
 
 .content-header {
-  height: 60px;
-  display: flex;
-  justify-content: flex-end;
-  background-color: #fff;
-  align-items: center;
-  border-bottom: 1px solid rgba(72,94,144,.16);
-  padding: 0 25px;
+    height: 60px;
+    display: flex;
+    justify-content: flex-end;
+    background-color: #fff;
+    align-items: center;
+    border-bottom: 1px solid rgba(72,94,144,.16);
+    padding-top: 0px;
+    padding-right: 25px;
+    padding-bottom: 0px;
+    padding-left: 50px;
 }
+
+    .content-header svg:not(.sizing) {
+        display: flex;
+        flex-direction: end;
+        width: 20px;
+        height: 20px;
+    }
 
 .nav {
   float: right;
@@ -95,13 +108,6 @@ span #gcp-version {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
-}
-
-.content-header svg:not(.sizing) {
-  display: flex;
-  flex-direction: end;
-  width: 20px;
-  height: 20px;
 }
 
 /* Body */
@@ -164,6 +170,9 @@ span #gcp-version {
   color: rgba(27,46,75,.5);
   display: block;
 }
+    .aside-alert-link a:hover {
+        color: #fff;
+    }
 .aside-loggedin svg {
   stroke-width: 2.3px;
   height: 16px;
@@ -197,7 +206,6 @@ span #gcp-version {
 .mg-b-0 {
   margin-bottom: 0;
 }
-
 
 .nav-aside .nav-link:before {
   content: "";
@@ -233,78 +241,6 @@ span .font-size-lg {
   font-size: 40px;
 }
 
-/* Content-body */
-/* .content-body {
-  height: calc(100% - 55px);
-  overflow-y: auto;
-  padding: 15px;
-  position: relative;
-}
-.simplebar-height-auto-observer, .simplebar-track {
-  overflow: hidden;
-  pointer-events: none;
-  position: absolute;
-}
-.simplebar-height-auto-observer {
-  box-sizing: inherit;
-  display: block;
-  height: 1000%;
-  left: 0;
-  min-height: 1px;
-  min-width: 1px;
-  opacity: 0;
-  top: 0;
-  width: 1000%;
-  z-index: -1;
-}
-.simplebar-mask, .simplebar-offset {
-  bottom: 0;
-  left: 0;
-  margin: 0;
-  padding: 0;
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-.simplebar-mask {
-  direction: inherit;
-  height: auto!important;
-  overflow: hidden;
-  width: auto!important;
-  z-index: 0;
-}
-.simplebar-offset {
-  -webkit-overflow-scrolling: touch;
-  box-sizing: inherit!important;
-  direction: inherit!important;
-  resize: none!important;
-}
-.simplebar-mask, .simplebar-offset {
-  bottom: 0;
-  left: 0;
-  margin: 0;
-  padding: 0;
-  position: absolute;
-  top: 0;
-}
-.simplebar-content-wrapper {
-  -ms-overflow-style: none;
-  box-sizing: border-box!important;
-  direction: inherit;
-  display: block;
-  height: 100%;
-  max-height: 100%;
-  max-width: 100%;
-  position: relative;
-  scrollbar-width: none;
-  width: auto;
-}
-.simplebar-placeholder {
-  max-height: 100%;
-  max-width: 100%;
-  pointer-events: none;
-  width: 100%;
-} */
 .sidebar-nav {
   width: var(--offcanvas-width);
 }
@@ -337,7 +273,6 @@ span .font-size-lg {
     top: var(--topNavbarHeight);
   }
 }
-
 
 /* Khu vưc giữa*/
 .column:nth-child(2) {
@@ -461,102 +396,6 @@ span .font-size-lg {
 .modal-backdrop.show {
   background-color: rgba(0, 0, 0, 0.1);
   /* 0.5 là độ trong suốt (từ 0.0 đến 1.0) */
-}
-
-.modal-content-border {
-  border: 2px solid #f0f0f0;
-  width: 100%;
-}
-
-.f-modal {
-  background-image: linear-gradient(to top, rgba(9, 3, 45, 1), rgba(141, 59, 54, 1));
-  justify-content: center;
-  align-items: center;
-  border-top: 6px solid #f0f0f0;
-}
-
-.modal-h {
-  display: flex;
-  color: #ffffff;
-  /* Change modal header text color */
-  justify-content: center;
-  align-items: center;
-  text-wrap: nowrap;
-  font-size: 30px;
-  margin-top: 30px;
-  font-weight: 900;
-}
-
-.modal-content {
-  background-image: linear-gradient(to top, rgba(9, 3, 45, 1), rgba(141, 59, 54, 1));
-  justify-content: center;
-  align-items: center;
-}
-
-.modal-content-border {
-  border: 2px solid #f0f0f0;
-  width: 100%;
-}
-
-.modal-b {
-  display: inline;
-  justify-content: center;
-  align-items: center;
-  font-size: 20px;
-  color: #ece9e9;
-}
-
-.dangky-div {
-  font-size: 20px;
-  font-weight: 700;
-  color: #ece9e9
-}
-
-.col-title {
-  padding-top: 20px;
-  justify-content: center;
-  align-items: center;
-  background-color: #3C519B;
-}
-
-.col-content {
-  padding-top: 20px;
-  justify-content: center;
-  align-items: center;
-  background-color: #070F2C;
-}
-
-.confirm {
-  background-color: #1F2D39;
-}
-
-.row {
-  margin-bottom: 1rem;
-}
-
-.color-yes {
-  color: #0FA958;
-}
-
-.color-no {
-  color: #F24E1E;
-}
-
-.modal-close {
-  position: absolute;
-  right: 8px;
-  top: 10px;
-  /* margin: 24px; */
-  cursor: pointer;
-  opacity: 0.8;
-}
-
-.modal-f {
-  display: flex;
-  flex-direction: row;
-  margin-top: 30px;
-  margin-left: 5px;
-  margin-bottom: 30px;
 }
 
 /* Reponsive */
