--- a/Admin_Baocao/Views/Admin/DonHang.cshtml
+++ b/Admin_Baocao/Views/Admin/DonHang.cshtml
@@ -53,7 +53,7 @@
 														<h6>THÔNG TIN CA HIỆN TẠI</h6>
 														<span class="text-success small mb-4 fw-bold">Đang nhận đơn</span>
 														<p class="mb-0">Nhận ca</p>
-														@*<p class="mb-0">Ngo Lam Phong - 09:24, 29/11/23</p>*@
+														<p class="mb-0">Ngo Lam Phong - 09:24, 29/11/23</p>
 													</div>
 													<div class="col-6 col-md-4 d-flex align-items-center pb-0">
 														<div class="card-icon rounded-2 d-flex align-items-center justify-content-center" style="background-color: #65E0E0;">
@@ -201,7 +201,7 @@
 				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
-				<form action="#">
+				@*<form action="#">*@
 					<div class="form-group mb-3">
 						<label for="createUserIdInput">ID KHÁCH HÀNG</label>
 						<input type="text" id="createUserIdInput" class="form-control">
@@ -213,7 +213,7 @@
 						<label for="chooseMH" style="color: gray; font-weight: 500">MẶT HÀNG</label>
 						<div class="dropup" style="background-color: white">
 							<button class="btn btn-secondary" id="customDropdown" type="button" data-bs-toggle="dropdown" aria-expanded="false" style="width: 100%">
-								<div id="createOrderContent">Thêm mặt hàng cho đơn hàng</div>
+								<div id="createOrderFnbContent">Thêm mặt hàng cho đơn hàng</div>
 								<div id="dropdownArrow" />
 							</button>
 							<ul class="dropdown-menu" id="createMatHangMenu" style="width: 100%; max-height: 25vh; overflow:auto">
@@ -237,13 +237,11 @@
 							</tbody>
 						</table>
 					</div>
-					
 					<div class="form-group d-md-flex">
-						<button type="submit" class="form-control btn btn-secondary rounded submit px-3" style="background-color: #3B4863;">Tạo Đơn Hàng</button>
+					<button type="button" class="form-control btn btn-secondary rounded px-3" id="createOrderButton" onclick="CreateOrderButtonPress()" style="background-color: #3B4863;">Tạo Đơn Hàng</button>
 					</div>
-				</form>
+				@*</form>*@
 			</div>
-
 		</div>
 	</div>
 </div>
